--- a/8.d3-array.html
+++ b/8.d3-array.html
@@ -112,6 +112,7 @@
           <pre>
             <code class="language-js line-numbers remove-initial-line-feed">
               //JS
+              const everData = [7, 5, 1, 13, 55, 2, 64];
               const isAllIntegersBiggerThanTwenty = d3.every(everData, (d) => d > 20);
               console.log("every >20", isAllIntegersBiggerThanTwenty); // false
             </code>
