--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <h2 class="text-center text-darkOrange mb-4 fw-bold">
           匯入不同格式的檔案
         </h2>
-        <div class="flex-wrap d-flex px-5">
+        <div class="flex-wrap px-5 d-flex">
           <a
             href="./7.import-data-apis.html"
             class="text-center p-2 col-6 dark-link"
@@ -135,13 +135,13 @@
           </div>
           <div class="p-3 col-lg-3 col-md-6 col-sm-12">
             <p class="text-center">Time Formats</p>
-            <a href="./9.d3-time-formate.html">
+            <a href="./9.d3-time-format.html">
               <img class="h-50 w-100" src="./img/time.jpg" />
             </a>
           </div>
           <div class="p-3 col-lg-3 col-md-6 col-sm-12">
             <p class="text-center">Number Formats</p>
-            <a href="./10.d3-number-formate.html">
+            <a href="./10.d3-number-format.html">
               <img class="h-50 w-100" src="./img/numbers.jpg" />
             </a>
           </div>
@@ -161,7 +161,9 @@
         <p class="bg-white z-0 position-absolute bubble-lg"></p>
         <p class="bg-white bubble-md"></p>
         <p class="bubble-sm"></p>
-        <h2 class="text-center pt-3 text-darkOrange w-100 fw-bold position-absolute">
+        <h2
+          class="text-center text-darkOrange pt-3 w-100 fw-bold position-absolute"
+        >
           繪製形狀三大 Helper Functions
         </h2>
         <div
@@ -204,24 +206,17 @@
         >
           <div class="mb-3 col-12">
             <h2 class="text-darkOrange fw-bold">比例尺與軸線</h2>
-            
           </div>
           <div class="p-3 col-md-6 col-sm-12">
             <p class="text-center">比例尺</p>
             <a href="">
-              <img
-                class="w-100"
-                src="./img/scale.png"
-              />
+              <img class="w-100" src="./img/scale.png" />
             </a>
           </div>
           <div class="p-3 col-md-6 col-sm-12">
             <p class="text-center">軸線與刻度</p>
             <a href="">
-              <img
-                class="w-50"
-                src="./img/xy-axis.png"
-              />
+              <img class="w-50" src="./img/xy-axis.png" />
             </a>
           </div>
         </div>
