--- a/12.helper-function-genertor.html
+++ b/12.helper-function-genertor.html
@@ -13,6 +13,18 @@
     />
     <link rel="stylesheet" href="./extension/prism.css" />
     <link rel="stylesheet" href="./css/utils.css" />
+    <style>
+      @media (max-width: 991.98px) {
+        .curve-display-web {
+          display: none;
+        }
+      }
+      @media (min-width: 991.98px) {
+        .curve-display-mob {
+          display: none;
+        }
+      }
+    </style>
   </head>
   <body>
     <nav class="bg-orange navbar">
@@ -117,85 +129,117 @@
         </div>
 
         <!-- d3.curve( ) -->
-        <div>
+        <div class="curve-display-mob">
           <h5 class="mt-4"><mark>d3.curve( )</mark></h5>
-            <div class="border px-2">
-              <p>curveBasis</p>
-              <svg
-                id="curveBasisWrapper"
-                width="500"
-                height="200"
-                style="border: 1px solid rgb(96, 96, 96)"
-              ></svg>
-            </div>
-            <div class="border p-2"><p>curveBumpX</p>
-              <svg
-                id="curveBumpXWrapper"
-                width="500"
-                height="200"
-                style="border: 1px solid rgb(96, 96, 96)"
-              ></svg>
-            </div>
-            <div class="border p-2"><p>curveBundle</p>
-              <svg
-                id="curveBundleWrapper"
-                width="500"
-                height="200"
-                style="border: 1px solid rgb(96, 96, 96)"
-              ></svg>
-            </div>
-            <div class="border p-2"><p>curveCardinal</p>
-              <svg
-                id="curveCardinalWrapper"
-                width="500"
-                height="200"
-                style="border: 1px solid rgb(96, 96, 96)"
-              ></svg>
-            </div>
-            <div class="border p-2"><p>tension</p>
-              <svg
-                id="curveTensionWrapper"
-                width="500"
-                height="200"
-                style="border: 1px solid rgb(96, 96, 96)"
-              ></svg>
-            </div>
-            <div class="border p-2"><p>curveCatmullRom alpha</p>
-              <svg
-                id="curveCatmullRomWrapper"
-                width="500"
-                height="200"
-                style="border: 1px solid rgb(96, 96, 96)"
-              ></svg>
-            </div>
-            <div class="border p-2"><p>curveLinear</p>
-              <svg
-                id="curveLinearWrapper"
-                width="500"
-                height="200"
-                style="border: 1px solid rgb(96, 96, 96)"
-              ></svg>
-            </div>
-            <div class="border p-2"><p>curveNatural</p>
-              <svg
-                id="curveNaturalWrapper"
-                width="500"
-                height="200"
-                style="border: 1px solid rgb(96, 96, 96)"
-              ></svg>
-            </div>
-            <div class="border p-2"><p>curveStep</p>
-              <svg
-                id="curveStepWrapper"
-                width="500"
-                height="200"
-                style="border: 1px solid rgb(96, 96, 96)"
-              ></svg>
-            </div>
+          <div class="border px-2">
+            <p class="mt-2 mb-2">curveBasis</p>
+            <pre style="width: 500px">
+              <code class="language-js line-numbers remove-initial-line-feed">
+                // JS
+                const lineCurveData = [
+                  { x: 30, y: 180 },
+                  { x: 50, y: 100 },
+                  { x: 200, y: 100 },
+                  { x: 200, y: 20 },
+                  { x: 300, y: 20 },
+                ];
+                // CurveBasis
+                const drawLineCurveBasis = d3
+                  .line()
+                  .curve(d3.curveBasis)
+                  .x((d) => d.x) // 設定x值要抓哪項資料
+                  .y((d) => d.y); // 設定y值要抓哪項資料z
+
+                d3.selectAll(".curveBasisWrapper")
+                  .append("path")
+                  .attr("d", drawLineCurveBasis(lineCurveData))
+                  .attr("stroke", "black")
+                  .attr("stroke-width", "2")
+                  .attr("fill", "none");
+              </code>
+            </pre>
+            <svg
+              class="curveBasisWrapper"
+              width="500"
+              height="200"
+              style="border: 1px solid rgb(96, 96, 96)"
+            ></svg>
+          </div>
+
+          <div class="border px-2">
+            <p class="mt-4 mb-2">curveBasisClosed</p>
+            <svg
+              class="curveBasisClosedWrapper"
+              width="500"
+              height="200"
+              style="border: 1px solid rgb(96, 96, 96)"
+            ></svg>
+          </div>
+          <div class="border p-2">
+            <p class="mt-4 mb-2">curveBumpX</p>
+            <svg
+              class="curveBumpXWrapper"
+              width="500"
+              height="200"
+              style="border: 1px solid rgb(96, 96, 96)"
+            ></svg>
+          </div>
+          <div class="border p-2">
+            <p class="mt-4 mb-2">curveBundle</p>
+            <svg
+              class="curveBundleWrapper"
+              width="500"
+              height="200"
+              style="border: 1px solid rgb(96, 96, 96)"
+            ></svg>
+          </div>
+          <div class="border p-2">
+            <p class="mt-4 mb-2">curveCardinal</p>
+            <svg
+              class="curveCardinalWrapper"
+              width="500"
+              height="200"
+              style="border: 1px solid rgb(96, 96, 96)"
+            ></svg>
+          </div>
+          <div class="border p-2">
+            <p class="mt-4 mb-2">curveCatmullRom</p>
+            <svg
+              class="curveCatmullRomWrapper"
+              width="500"
+              height="200"
+              style="border: 1px solid rgb(96, 96, 96)"
+            ></svg>
+          </div>
+          <div class="border p-2">
+            <p class="mt-4 mb-2">curveLinear</p>
+            <svg
+              class="curveLinearWrapper"
+              width="500"
+              height="200"
+              style="border: 1px solid rgb(96, 96, 96)"
+            ></svg>
+          </div>
+          <div class="border p-2">
+            <p class="mt-4 mb-2">curveNatural</p>
+            <svg
+              class="curveNaturalWrapper"
+              width="500"
+              height="200"
+              style="border: 1px solid rgb(96, 96, 96)"
+            ></svg>
+          </div>
+          <div class="border p-2">
+            <p class="mt-4 mb-2">curveStep</p>
+            <svg
+              class="curveStepWrapper"
+              width="500"
+              height="200"
+              style="border: 1px solid rgb(96, 96, 96)"
+            ></svg>
+          </div>
 
           <div>Custom Curves</div>
-
-          
 
           <p class="mt-2 mb-1 fs-6">程式碼</p>
           <pre>
@@ -205,8 +249,96 @@
           </pre>
         </div>
 
+        <!-- d3.curve( ) display -->
+        <div class="border my-4 curve-display-web">
+          <p class="fw-bold">Curve Display</p>
+          <div class="flex-wrap d-flex">
+            <div class="p-2 col-4">
+              <p class="text-center mb-2">curveBasis</p>
+              <svg
+                class="curveBasisWrapper"
+                width="300"
+                height="200"
+                style="border: 1px solid rgb(96, 96, 96)"
+              ></svg>
+            </div>
+            <div class="p-2 col-4">
+              <p class="text-center mb-2">curveBasisClosed</p>
+              <svg
+                class="curveBasisClosedWrapper"
+                width="300"
+                height="200"
+                style="border: 1px solid rgb(96, 96, 96)"
+              ></svg>
+            </div>
+            <div class="p-2 col-4">
+              <p class="text-center mb-2">curveBumpX</p>
+              <svg
+                class="curveBumpXWrapper"
+                width="300"
+                height="200"
+                style="border: 1px solid rgb(96, 96, 96)"
+              ></svg>
+            </div>
+            <div class="p-2 col-4">
+              <p class="text-center mb-2">curveBundle</p>
+              <svg
+                class="curveBundleWrapper"
+                width="300"
+                height="200"
+                style="border: 1px solid rgb(96, 96, 96)"
+              ></svg>
+            </div>
+            <div class="p-2 col-4">
+              <p class="text-center mb-2">curveCardinal</p>
+              <svg
+                class="curveCardinalWrapper"
+                width="300"
+                height="200"
+                style="border: 1px solid rgb(96, 96, 96)"
+              ></svg>
+            </div>
+            <div class="p-2 col-4">
+              <p class="text-center mb-2">curveCatmullRom</p>
+              <svg
+                class="curveCatmullRomWrapper"
+                width="300"
+                height="200"
+                style="border: 1px solid rgb(96, 96, 96)"
+              ></svg>
+            </div>
+            <div class="p-2 col-4">
+              <p class="text-center mb-2">curveLinear</p>
+              <svg
+                class="curveLinearWrapper"
+                width="300"
+                height="200"
+                style="border: 1px solid rgb(96, 96, 96)"
+              ></svg>
+            </div>
+            <div class="p-2 col-4">
+              <p class="text-center mb-2">curveNatural</p>
+              <svg
+                class="curveNaturalWrapper"
+                width="300"
+                height="200"
+                style="border: 1px solid rgb(96, 96, 96)"
+              ></svg>
+            </div>
+            <div class="p-2 col-4">
+              <p class="text-center mb-2">curveStep</p>
+              <svg
+                class="curveStepWrapper"
+                width="300"
+                height="200"
+                style="border: 1px solid rgb(96, 96, 96)"
+              ></svg>
+            </div>
+          </div>
+        </div>
+
         <!-- d3.link( ) -->
-        <div>
+        <div class="mt-5">
           <h5 class="mt-4"><mark>d3.link( )</mark></h5>
           <svg
             id="linkVerticalWrapper"
@@ -214,7 +346,6 @@
             height="200"
             style="border: 1px solid rgb(96, 96, 96)"
           ></svg>
-
           <p class="mt-2 mb-1 fs-6">程式碼</p>
           <pre>
             <code class="language-js line-numbers remove-initial-line-feed">
@@ -227,11 +358,18 @@
             width="500"
             height="200"
             style="border: 1px solid rgb(96, 96, 96)"
+            class="mt-5"
           ></svg>
+          <p class="mt-2 mb-1 fs-6">程式碼</p>
+          <pre>
+            <code class="language-js line-numbers remove-initial-line-feed">
+              //JS
+            </code>
+          </pre>
         </div>
 
         <!-- d3.arc( ) -->
-        <div>
+        <div class="mt-5">
           <h5 class="mt-4"><mark>d3.arc( )</mark></h5>
           <svg
             id="arcWrapper"
@@ -332,18 +470,130 @@
         { x: 50, y: 100 },
         { x: 200, y: 100 },
         { x: 200, y: 20 },
-        { x: 400, y: 20 },
+        { x: 300, y: 20 },
       ];
+      // CurveBasis
+      const drawLineCurveBasis = d3
+        .line()
+        .curve(d3.curveBasis)
+        .x((d) => d.x) // 設定x值要抓哪項資料
+        .y((d) => d.y); // 設定y值要抓哪項資料z
 
+      d3.selectAll(".curveBasisWrapper")
+        .append("path")
+        .attr("d", drawLineCurveBasis(lineCurveData))
+        .attr("stroke", "black")
+        .attr("stroke-width", "2")
+        .attr("fill", "none");
+
+      // CurveBasisClosed
+      const drawLineCurveBasisClosed = d3
+        .line()
+        .curve(d3.curveBasisClosed)
+        .x((d) => d.x) // 設定x值要抓哪項資料
+        .y((d) => d.y); // 設定y值要抓哪項資料z
+
+      d3.selectAll(".curveBasisClosedWrapper")
+        .append("path")
+        .attr("d", drawLineCurveBasisClosed(lineCurveData))
+        .attr("stroke", "black")
+        .attr("stroke-width", "2")
+        .attr("fill", "none");
+
+      // CurveBumpX
+      const drawLineCurveBumpX = d3
+        .line()
+        .curve(d3.curveBumpX)
+        .x((d) => d.x) // 設定x值要抓哪項資料
+        .y((d) => d.y); // 設定y值要抓哪項資料z
+
+      d3.selectAll(".curveBumpXWrapper")
+        .append("path")
+        .attr("d", drawLineCurveBumpX(lineCurveData))
+        .attr("stroke", "black")
+        .attr("stroke-width", "2")
+        .attr("fill", "none");
+
+      // CurveBundle
       const drawLineCurveBundle = d3
         .line()
         .curve(d3.curveBundle)
         .x((d) => d.x) // 設定x值要抓哪項資料
         .y((d) => d.y); // 設定y值要抓哪項資料z
 
-      d3.select("#curveBundleWrapper")
+      d3.selectAll(".curveBundleWrapper")
         .append("path")
         .attr("d", drawLineCurveBundle(lineCurveData))
+        .attr("stroke", "black")
+        .attr("stroke-width", "2")
+        .attr("fill", "none");
+
+      // CurveCardinal
+      const drawLineCurveCardinal = d3
+        .line()
+        .curve(d3.curveCardinal)
+        .x((d) => d.x) // 設定x值要抓哪項資料
+        .y((d) => d.y); // 設定y值要抓哪項資料z
+
+      d3.selectAll(".curveCardinalWrapper")
+        .append("path")
+        .attr("d", drawLineCurveCardinal(lineCurveData))
+        .attr("stroke", "black")
+        .attr("stroke-width", "2")
+        .attr("fill", "none");
+
+      // CurveCatmullRom
+      const drawLineCurveCatmullRom = d3
+        .line()
+        .curve(d3.curveCatmullRom)
+        .x((d) => d.x) // 設定x值要抓哪項資料
+        .y((d) => d.y); // 設定y值要抓哪項資料z
+
+      d3.selectAll(".curveCatmullRomWrapper")
+        .append("path")
+        .attr("d", drawLineCurveCatmullRom(lineCurveData))
+        .attr("stroke", "black")
+        .attr("stroke-width", "2")
+        .attr("fill", "none");
+
+      // CurveLinear
+      const drawLineCurveLinear = d3
+        .line()
+        .curve(d3.curveLinear)
+        .x((d) => d.x) // 設定x值要抓哪項資料
+        .y((d) => d.y); // 設定y值要抓哪項資料z
+
+      d3.selectAll(".curveLinearWrapper")
+        .append("path")
+        .attr("d", drawLineCurveLinear(lineCurveData))
+        .attr("stroke", "black")
+        .attr("stroke-width", "2")
+        .attr("fill", "none");
+
+      // CurveNatural
+      const drawLineCurveNatural = d3
+        .line()
+        .curve(d3.curveNatural)
+        .x((d) => d.x) // 設定x值要抓哪項資料
+        .y((d) => d.y); // 設定y值要抓哪項資料z
+
+      d3.selectAll(".curveNaturalWrapper")
+        .append("path")
+        .attr("d", drawLineCurveNatural(lineCurveData))
+        .attr("stroke", "black")
+        .attr("stroke-width", "2")
+        .attr("fill", "none");
+
+      // CurveNatural
+      const drawLineCurveStep = d3
+        .line()
+        .curve(d3.curveStep)
+        .x((d) => d.x) // 設定x值要抓哪項資料
+        .y((d) => d.y); // 設定y值要抓哪項資料z
+
+      d3.selectAll(".curveStepWrapper")
+        .append("path")
+        .attr("d", drawLineCurveStep(lineCurveData))
         .attr("stroke", "black")
         .attr("stroke-width", "2")
         .attr("fill", "none");
