--- a/13.helper-function-components.html
+++ b/13.helper-function-components.html
@@ -35,7 +35,8 @@
 
       <div>
         <div>
-          <h5 class="my-4"><mark>axis 軸線</mark></h5>
+          <h5 class="my-4">Axes 軸線</h5>
+          <h5 class="my-4"><mark>d3.axisBottom( )</mark></h5>
           <svg style="border: 1px solid rgb(96, 96, 96)" class="axis"></svg>
 
           <p class="mt-2 mb-1 fs-6">程式碼</p>
