index :新增範例頁面

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
           </div>
           <a
             href="./2.svg_shapes.html"
+            target="_blank"
             class="p-3 col-lg-3 col-md-4 col-sm-12 dark-link"
           >
             <p>形狀元素</p>
@@ -60,6 +61,7 @@
           </a>
           <a
             href="./3.svg_path_and_words.html"
+            target="_blank"
             class="p-3 col-lg-3 col-md-4 col-sm-12 dark-link"
           >
             <p>路徑與文字</p>
@@ -67,6 +69,7 @@
           </a>
           <a
             href="./4.svg_style.html"
+            target="_blank"
             class="p-3 col-lg-3 col-md-4 col-sm-12 dark-link"
           >
             <p>樣式與轉換屬性</p>
@@ -83,6 +86,7 @@
         <div class="flex-wrap d-flex justify-content-around">
           <a
             href="./5.selection.html"
+            target="_blank"
             class="text-center p-2 col-md-6 col-sm-12 col-12 dark-link"
           >
             <p class="">Selection 選取</p>
@@ -90,6 +94,7 @@
           </a>
           <a
             href="./6.data_binding.html"
+            target="_blank"
             class="text-center p-2 col-md-6 col-sm-12 col-12 dark-link"
           >
             <p class="">Binding 綁定</p>
@@ -106,6 +111,7 @@
         <div class="flex-wrap px-5 d-flex">
           <a
             href="./7.import-data-apis.html"
+            target="_blank"
             class="text-center p-2 col-6 dark-link"
           >
             <img class="rounded w-100" src="./img/import-data.jpg" />
@@ -129,25 +135,25 @@
           </div>
           <div class="p-3 col-lg-3 col-md-6 col-sm-12">
             <p class="text-center">Array</p>
-            <a href="./8.d3-array.html">
+            <a href="./8.d3-array.html" target="_blank">
               <img class="h-50 w-100" src="./img/array.png" />
             </a>
           </div>
           <div class="p-3 col-lg-3 col-md-6 col-sm-12">
             <p class="text-center">Time Formats</p>
-            <a href="./9.d3-time-format.html">
+            <a href="./9.d3-time-format.html" target="_blank">
               <img class="h-50 w-100" src="./img/time.jpg" />
             </a>
           </div>
           <div class="p-3 col-lg-3 col-md-6 col-sm-12">
             <p class="text-center">Number Formats</p>
-            <a href="./10.d3-number-format.html">
+            <a href="./10.d3-number-format.html" target="_blank">
               <img class="h-50 w-100" src="./img/numbers.jpg" />
             </a>
           </div>
           <div class="p-3 col-lg-3 col-md-6 col-sm-12">
             <p class="text-center">Random</p>
-            <a href="./11.d3-random.html">
+            <a href="./11.d3-random.html" target="_blank">
               <img class="w-100" src="./img/random.jpg" />
             </a>
           </div>
@@ -171,29 +177,20 @@
         >
           <div class="p-3 col-lg-4 col-md-4 col-sm-12">
             <p class="text-center">Generator</p>
-            <a href="./12.helper-function-genertor.html">
-              <img
-                class="w-100"
-                src="./img/geometry_shapes_black_and_white.jpg"
-              />
+            <a href="./12.helper-function-generator.html" target="_blank">
+              <img class="w-100" src="./img/generator.jpg" />
             </a>
           </div>
           <div class="p-3 col-md-4 col-12">
             <p class="text-center">Component</p>
-            <a href="./13.helper-function-components.html">
-              <img
-                class="w-100"
-                src="./img/geometry_shapes_black_and_white.jpg"
-              />
+            <a href="./13.helper-function-components.html" target="_blank">
+              <img class="w-100" src="./img/components.jpg" />
             </a>
           </div>
           <div class="p-3 col-md-4 col-12">
             <p class="text-center">Layout</p>
-            <a href="./14.helper-function-layouts.html">
-              <img
-                class="w-100"
-                src="./img/geometry_shapes_black_and_white.jpg"
-              />
+            <a href="./14.helper-function-layouts.html" target="_blank">
+              <img class="w-100" src="./img/layouts.jpg" />
             </a>
           </div>
         </div>
@@ -209,14 +206,52 @@
           </div>
           <div class="p-3 col-md-6 col-sm-12">
             <p class="text-center">比例尺</p>
-            <a href="">
+            <a href="./15.scale.html" target="_blank">
               <img class="w-100" src="./img/scale.png" />
             </a>
           </div>
           <div class="p-3 col-md-6 col-sm-12">
-            <p class="text-center">軸線與刻度</p>
-            <a href="">
+            <p class="text-center">軸線/刻度/工具提示框</p>
+            <a href="./16.axes.html" target="_blank">
               <img class="w-50" src="./img/xy-axis.png" />
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <!-- 插補、色彩、RWD-->
+      <section class="container pt-5 z-5 position-relative">
+        <div
+          class="flex-wrap h-100 text-center py-3 w-100 d-md-flex justify-content-around align-items-center"
+        >
+          <div class="mb-3 col-12">
+            <h2 class="text-darkOrange fw-bold">插補、色彩、RWD</h2>
+          </div>
+          <div class="p-3 col-md-4 col-sm-12">
+            <p class="text-center">插補 Interpolate</p>
+            <a href="./17.interpolate.html" target="_blank">
+              <img
+                class="w-100"
+                src="./img/geometry_shapes_black_and_white.jpg"
+              />
+            </a>
+          </div>
+          <div class="p-3 col-md-4 col-sm-12">
+            <p class="text-center">色彩</p>
+            <a href="./18.colors.html" target="_blank">
+              <img
+                class="w-100"
+                src="./img/geometry_shapes_black_and_white.jpg"
+              />
+            </a>
+          </div>
+          <div class="p-3 col-md-4 col-sm-12">
+            <p class="text-center">RWD</p>
+            <a href="./19.responsive.html" target="_blank">
+              <img
+                class="w-100"
+                src="./img/geometry_shapes_black_and_white.jpg"
+              />
             </a>
           </div>
         </div>
@@ -226,29 +261,68 @@
       <section class="container pt-5">
         <h2 class="text-center text-darkOrange mb-4 fw-bold">基礎圖表</h2>
         <div class="flex-wrap d-flex justify-content-center">
-          <div class="text-center mb-5 col-12 col-sm-8 col-md-6 col-lg-4">
+          <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
+            <p class="mb-1">圓餅圖</p>
+            <p>pie chart</p>
+            <a href="./20.pie-chart.html" target="_blank">
+              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
+            </a>
+          </div>
+          <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
+            <p class="mb-1">甜甜圈圖</p>
+            <p>donut chart</p>
+            <a href="./21.donut-chart.html" target="_blank">
+              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
+            </a>
+          </div>
+          <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
+            <p class="mb-1">散點圖</p>
+            <p>scatter chart</p>
+            <a href="./22.scatter-chart.html" target="_blank">
+              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
+            </a>
+          </div>
+          <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
+            <p class="mb-1">氣泡圖</p>
+            <p>bubble chart</p>
+            <a href="./23.bubble-chart.html" target="_blank">
+              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
+            </a>
+          </div>
+          <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
+            <p class="mb-1">長條圖</p>
+            <p>bar chart</p>
+            <a href="./24.bar-chart.html" target="_blank">
+              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
+            </a>
+          </div>
+          <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
+            <p class="mb-1">複數長條圖</p>
+            <p>multiple bar chart</p>
+            <a href="./25.multiple-bar-chart.html" target="_blank">
+              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
+            </a>
+          </div>
+          <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
+            <p class="mb-1">堆積長條圖</p>
+            <p>stacked bar chart</p>
+            <a href="./26.stacked-bar-chart.html" target="_blank">
+              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
+            </a>
+          </div>
+          <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
+            <p class="mb-1">折線圖</p>
             <p>line chart</p>
-            <img src="https://fakeimg.pl/300x300/?text=Hello" />
+            <a href="./27.line-chart.html" target="_blank">
+              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
+            </a>
           </div>
-          <div class="text-center mb-5 col-12 col-sm-8 col-md-6 col-lg-4">
-            <p>pie chart</p>
-            <img src="https://fakeimg.pl/300x300/?text=Hello" />
-          </div>
-          <div class="text-center mb-5 col-12 col-sm-8 col-md-6 col-lg-4">
-            <p>pie chart</p>
-            <img src="https://fakeimg.pl/300x300/?text=Hello" />
-          </div>
-          <div class="text-center mb-5 col-12 col-sm-8 col-md-6 col-lg-4">
-            <p>pie chart</p>
-            <img src="https://fakeimg.pl/300x300/?text=Hello" />
-          </div>
-          <div class="text-center mb-5 col-12 col-sm-8 col-md-6 col-lg-4">
-            <p>pie chart</p>
-            <img src="https://fakeimg.pl/300x300/?text=Hello" />
-          </div>
-          <div class="text-center mb-5 col-12 col-sm-8 col-md-6 col-lg-4">
-            <p>pie chart</p>
-            <img src="https://fakeimg.pl/300x300/?text=Hello" />
+          <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
+            <p class="mb-1">多線折線圖</p>
+            <p>multiple line chart</p>
+            <a href="./28.multiple-line-chart.html" target="_blank">
+              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
+            </a>
           </div>
         </div>
       </section>
@@ -262,22 +336,46 @@
           class="flex-wrap text-center top-20 w-100 d-flex justify-content-around"
         >
           <div class="p-3 col-lg-4 col-md-4 col-sm-12">
+            <p class="mb-1">動畫</p>
             <p class="text-center">transition</p>
+            <a href="./29.transition.html" target="_blank">
+              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
+            </a>
           </div>
           <div class="p-3 col-md-4 col-12">
+            <p class="mb-1">滑鼠事件</p>
             <p class="text-center">Mouse Event</p>
+            <a href="./30.mouse-event.html" target="_blank">
+              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
+            </a>
           </div>
           <div class="p-3 col-md-4 col-12">
+            <p class="mb-1">縮放</p>
             <p class="text-center">Zoom</p>
+            <a href="./31.zoom.html" target="_blank">
+              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
+            </a>
           </div>
           <div class="p-3 col-md-4 col-12">
+            <p class="mb-1">拖曳</p>
             <p class="text-center">Drag</p>
+            <a href="./32.drag.html" target="_blank">
+              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
+            </a>
           </div>
           <div class="p-3 col-md-4 col-12">
+            <p class="mb-1">原力</p>
             <p class="text-center">Force</p>
+            <a href="./33.force.html" target="_blank">
+              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
+            </a>
           </div>
           <div class="p-3 col-md-4 col-12">
+            <p class="mb-1">刷子</p>
             <p class="text-center">Brush</p>
+            <a href="./34.brush.html" target="_blank">
+              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
+            </a>
           </div>
         </div>
       </section>
@@ -286,29 +384,41 @@
       <section class="container pt-5">
         <h2 class="text-center text-darkOrange fw-bold">進階圖表</h2>
         <div class="flex-wrap d-flex justify-content-center">
-          <div class="text-center mb-5 col-12 col-sm-8 col-md-6 col-lg-4">
+          <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
             <p>line chart</p>
-            <img src="https://fakeimg.pl/300x300/?text=Hello" />
+            <a href="">
+              <img class="w-100" src="https://fakeimg.pl/300x300/?text=Hello" />
+            </a>
           </div>
-          <div class="text-center mb-5 col-12 col-sm-8 col-md-6 col-lg-4">
+          <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
             <p>pie chart</p>
-            <img src="https://fakeimg.pl/300x300/?text=Hello" />
+            <a href="">
+              <img class="w-100" src="https://fakeimg.pl/300x300/?text=Hello" />
+            </a>
           </div>
-          <div class="text-center mb-5 col-12 col-sm-8 col-md-6 col-lg-4">
+          <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
             <p>pie chart</p>
-            <img src="https://fakeimg.pl/300x300/?text=Hello" />
+            <a href="">
+              <img class="w-100" src="https://fakeimg.pl/300x300/?text=Hello" />
+            </a>
           </div>
-          <div class="text-center mb-5 col-12 col-sm-8 col-md-6 col-lg-4">
+          <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
             <p>pie chart</p>
-            <img src="https://fakeimg.pl/300x300/?text=Hello" />
+            <a href="">
+              <img class="w-100" src="https://fakeimg.pl/300x300/?text=Hello" />
+            </a>
           </div>
-          <div class="text-center mb-5 col-12 col-sm-8 col-md-6 col-lg-4">
+          <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
             <p>pie chart</p>
-            <img src="https://fakeimg.pl/300x300/?text=Hello" />
+            <a href="">
+              <img class="w-100" src="https://fakeimg.pl/300x300/?text=Hello" />
+            </a>
           </div>
-          <div class="text-center mb-5 col-12 col-sm-8 col-md-6 col-lg-4">
+          <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
             <p>pie chart</p>
-            <img src="https://fakeimg.pl/300x300/?text=Hello" />
+            <a href="">
+              <img class="w-100" src="https://fakeimg.pl/300x300/?text=Hello" />
+            </a>
           </div>
         </div>
       </section>
