範例程式碼

--- a/15.scale.html
+++ b/15.scale.html
@@ -28,6 +28,17 @@
 
     <div class="container">
       <h3 class="mt-6 fw-bold">比例尺 Scales</h3>
+
+      <div>
+        <h5 class="mt-4"><mark>d3.scale( )</mark></h5>
+        <svg class="mt-4 stack" style="border: 1px solid rgb(96, 96, 96)"></svg>
+
+        <p class="mt-2 mb-1 fs-6">程式碼</p>
+        <pre>
+          <code class="language-js line-numbers remove-initial-line-feed">
+          </code>
+        </pre>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
