--- a/16.axes.html
+++ b/16.axes.html
@@ -28,6 +28,17 @@
 
     <div class="container">
       <h3 class="mt-6 fw-bold">軸線、刻度、工具提示框</h3>
+
+      <div>
+        <h5 class="mt-4"><mark>d3.( )</mark></h5>
+        <svg class="mt-4 stack" style="border: 1px solid rgb(96, 96, 96)"></svg>
+
+        <p class="mt-2 mb-1 fs-6">程式碼</p>
+        <pre>
+          <code class="language-js line-numbers remove-initial-line-feed">
+          </code>
+        </pre>
+      </div>
     </div>
 
     <script
